# serverest-api-tests

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  RELEASE.md  config.py  docker-compose.yml  pyproject.toml
services/: base_client.py
services/serverest_api/: serverest_client.py
services/serverest_api/api/: carts.py  login.py  products.py  users.py
tests/: conftest.py  test_carts.py  test_login.py  test_products.py  test_users.py
tests/data/: create_cart_data.json  create_product_data.json  create_user_data.json  update_product_data.json  update_user_data.json
utils/: calculator.py  data_generator.py  file_manager.py  logger.py  request.py
